--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 # tools
-**git clone https://github.com/reddysubbu888/tools.git**
+git clone https://github.com/reddysubbu888/tools.git
 chmod +x install.sh
 sudo ./install.sh
